Add devise for user aunthentiation

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,10 @@
   </head>
 
   <body>
-    <%= yield %>
+    <div class="container">
+      <br>
+      <%= render 'shared/alerts' %>
+      <%= yield %>
+    </div>
   </body>
 </html>
