--- a/app/views/recipes/_recipe.html.erb
+++ b/app/views/recipes/_recipe.html.erb
@@ -1,4 +1,4 @@
-<div class="d-flex gap-3 border border-2 rounded rounded-2 mb-3">
+<div class="d-flex gap-3 border border-2 rounded rounded-2 mb-3 p-3">
 	<div>
 		<span><%= link_to recipe.name, recipe %></span>
 	</div>
