Place toggle button to the right of screen

--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,6 +1,6 @@
 <section>
 	<h2><%= @recipe.name %></h2>
-	<div>
+	<div class="d-flex justify-content-between align-items-center">
 		<span>Preparation Time: <%= @recipe.preparation_time %></span>
 		<div class="form-check form-switch form-check-reverse">
 		  <input class="form-check-input" type="checkbox" id="flexSwitchCheckReverse">
