--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,12 +1,12 @@
 <section>
-	<h2><%= @recipe.name %></h2>
-	<div class="d-flex justify-content-between align-items-center">
+	<h2 class="text-center mb-3"><%= @recipe.name %></h2>
+	<div class="d-flex justify-content-between align-items-center mb-3">
 		<span>Preparation Time: <%= @recipe.preparation_time %></span>
 		<div class="form-check form-switch form-check-reverse">
 		  <input class="form-check-input" type="checkbox" id="flexSwitchCheckReverse">
 		  <label class="form-check-label" for="flexSwitchCheckReverse">Public</label>
 		</div>
 	</div>
-	<span>Cooking Time: <%= @recipe.cooking_time %></span>
+	<span class="d-block mb-3">Cooking Time: <%= @recipe.cooking_time %></span>
 	<span>Steps goes here...</span>
 </section>
