Add link to generate shopping list and add ingredient

--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -9,4 +9,9 @@
 	</div>
 	<span class="d-block mb-3">Cooking Time: <%= @recipe.cooking_time %></span>
 	<span>Steps goes here...</span>
+	<div>
+		<%= link_to 'Generate shopping list' %>
+		<%= link_to 'Add ingredient' %>
+	</div>
+	<hr/>
 </section>
