--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,5 +1,7 @@
 <section>
 	<% @recipes.each do |recipe| %>
-		<%= render 'recipe', recipe: recipe %>
+		<% unless recipe.private? %>
+			<%= render 'recipe', recipe: recipe %>
+		<% end %>
 	<% end %>
 </section>
