Add link for creating new recipe

--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -4,4 +4,6 @@
 			<%= render 'recipe', recipe: recipe %>
 		<% end %>
 	<% end %>
+
+	<%= link_to 'New Recipe', new_recipe_path, class: 'btn btn-outline-dark btn-sm' %>
 </section>
