--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,7 +1,7 @@
 <br>
 <h2 class="text-center">Add New Recipe</h2>
 <br>
-<%= form_with model: @recipe, url: recipes_path, local_scope: true do |f| %>
+<%= form_with model: @recipe do |f| %>
 	<div>
 		<%= f.label :status %>
 		<%= f.select :status, %w[public private], selected: 'public'%>
@@ -9,22 +9,26 @@
 	<br>
 	<div>
 		<%= f.label :name %>
-		<%= f.text_field :name, autofocus: true, autocomplete: 'name', class: 'form-control' %>
+		<%= f.text_field :name, autofocus: true, autocomplete: 'name', placeholder: 'name', class: 'form-control' %>
 	</div>
 	<br>
 	<div>
 		<%= f.label :cooking_time, "Cooking Time" %>
-		<%= f.text_field :cooking_time, autofocus: true, autocomplete: 'cooking_time', class: 'form-control' %>
+		<%= f.text_field :cooking_time, autofocus: true, autocomplete: 'cooking_time', placeholder: 'Cooking time', class: 'form-control' %>
 	</div>
 	<br>
 	<div>
 		<%= f.label :preparation_time, "Preparation Time" %>
-		<%= f.text_field :preparation_time, autofocus: true, autocomplete: 'preparation_time', class: 'form-control' %>
+		<%= f.text_field :preparation_time, autofocus: true, autocomplete: 'preparation_time', placeholder: 'Preparation time', class: 'form-control' %>
 	</div>
 	<br>
 	<div>
 		<%= f.label :Description %>
-		<%= f.text_area :description, autofocus: true, autocomplete: 'description', class: 'form-control' %>
+		<%= f.text_area :description, autofocus: true, autocomplete: 'description', placeholder: 'description', class: 'form-control' %>
+	</div>
+	<br>
+	<div>
+		<%= f.number_field :user_id, value: current_user.id, type: :hidden %>
 	</div>
 	<br>
 	<div>
