Add delete button to recipe

--- a/app/views/recipes/_recipe.html.erb
+++ b/app/views/recipes/_recipe.html.erb
@@ -1,6 +1,7 @@
 <div class="d-flex gap-3 border border-2 rounded rounded-2 mb-3 p-3 align-items-center">
 	<div>
 		<span><%= link_to recipe.name, recipe, class: 'nav-link fs-4 fw-bold' %></span>
+		<%= link_to 'REMOVE', [recipe], method: :delete, data: {confirm: 'Are you sure!'} %>
 	</div>
 	<div>
 		<span><%= recipe.description %></span>
