Add padding between recipe name and remove button

--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,4 +1,4 @@
-<section>
+<section class="my-3 p-3">
 	<% @recipes.each do |recipe| %>
 		<% unless recipe.private? %>
 			<%= render 'recipe', recipe: recipe %>
