--- a/app/views/recipes/_recipe.html.erb
+++ b/app/views/recipes/_recipe.html.erb
@@ -1,9 +1,9 @@
-<div class="d-flex gap-3 border border-2 rounded rounded-2 mb-3 p-3 align-items-center">
-	<div>
+<div class="row border border-2 rounded rounded-2 mb-3 p-3">
+	<div class="col d-flex flex-column justify-content-between">
 		<span><%= link_to recipe.name, recipe, class: 'nav-link fs-4 fw-bold' %></span>
-		<%= link_to 'REMOVE', [recipe], method: :delete, data: {confirm: 'Are you sure!'} %>
+		<%= link_to 'REMOVE', [recipe], method: :delete, data: {confirm: 'Are you sure!'}, class: 'fs-6 text-decoration-none' %>
 	</div>
-	<div>
+	<div class="col-10">
 		<span><%= recipe.description %></span>
 	</div>
 </div>
