Add flexbox alignment for the modal

--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -22,18 +22,23 @@
 		      </div>
 		      <div class="modal-body">
 		      	<span>Choose an inventory to use</span>
-		        <div class="dropdown-center">
-						  <button class="btn btn-outline-dark btn-sm dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-						    ..Select inventory..
-						  </button>
-						  <ul class="dropdown-menu">
-						  </ul>
+						<div class="d-flex justify-content-between align-items-center mt-3">
+							<div class="dropdown-center">
+								<button class="btn btn-outline-dark btn-sm dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+									..Select inventory..
+								</button>
+								<ul class="dropdown-menu">
+								</ul>
+							</div>
+							<div>
+								<%= link_to 'Generate', new_recipe_path, class: 'btn btn-outline-dark btn-sm' %>
+							</div>
 						</div>
 		      </div>
 		    </div>
 		  </div>
 		</div>
-		<%= link_to 'Add ingredient', class: 'btn btn-outline-dark btn-sm' %>
+		<%= link_to 'Add ingredient', new_recipe_path, class: 'btn btn-outline-dark btn-sm' %>
 	</div>
 	<hr/>
 </section>
