--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
   <body>
     <div class="container">
       <br>
+      <%= render 'home/navbar' %>
       <%= render 'shared/alerts' %>
       <%= yield %>
     </div>
