--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -41,4 +41,16 @@
 		<%= link_to 'Add ingredient', new_recipe_path, class: 'btn btn-outline-dark btn-sm' %>
 	</div>
 	<hr/>
+	<table class="table table-striped table-bordered">
+		<thead>
+			<tr>
+				<th scope="col">Food</th>
+				<th scope="col">Quantity</th>
+				<th scope="col">Value</th>
+				<th scope="col">Action</th>
+			</tr>
+		</thead>
+		<tbody>
+		</tbody>
+	</table>
 </section>
