--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,56 +1,60 @@
 <section>
-	<h2 class="text-center mb-3"><%= @recipe.name %></h2>
-	<div class="d-flex justify-content-between align-items-center mb-3">
-		<span>Preparation Time: <%= @recipe.preparation_time %></span>
-		<div class="form-check form-switch form-check-reverse">
-		  <input class="form-check-input" type="checkbox" id="flexSwitchCheckReverse">
-		  <label class="form-check-label" for="flexSwitchCheckReverse">Public</label>
+	<% if @recipe.status == 'public' || @recipe.user == current_user %>
+		<h2 class="text-center mb-3"><%= @recipe.name %></h2>
+		<div class="d-flex justify-content-between align-items-center mb-3">
+			<span>Preparation Time: <%= @recipe.preparation_time %></span>
+			<div class="form-check form-switch form-check-reverse">
+				<input class="form-check-input" type="checkbox" id="flexSwitchCheckReverse">
+				<label class="form-check-label" for="flexSwitchCheckReverse">Public</label>
+			</div>
 		</div>
-	</div>
-	<span class="d-block mb-3">Cooking Time: <%= @recipe.cooking_time %></span>
-	<span>Steps goes here...</span>
-	<div class="d-flex justify-content-between align-items-center mt-3">
-		<button type="button" class="btn btn-outline-dark btn-sm" data-bs-toggle="modal" data-bs-target="#exampleModal">
-		  Generate shopping list
-		</button>
-		<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-		  <div class="modal-dialog">
-		    <div class="modal-content">
-		      <div class="modal-header">
-		        <h1 class="modal-title fs-5" id="exampleModalLabel">Generate shopping list</h1>
-		        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-		      </div>
-		      <div class="modal-body">
-		      	<span>Choose an inventory to use</span>
-						<div class="d-flex justify-content-between align-items-center mt-3">
-							<div class="dropdown-center">
-								<button class="btn btn-outline-dark btn-sm dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-									..Select inventory..
-								</button>
-								<ul class="dropdown-menu">
-								</ul>
-							</div>
-							<div>
-								<%= link_to 'Generate', new_recipe_path, class: 'btn btn-outline-dark btn-sm' %>
+		<span class="d-block mb-3">Cooking Time: <%= @recipe.cooking_time %></span>
+		<span>Steps goes here...</span>
+		<div class="d-flex justify-content-between align-items-center mt-3">
+			<button type="button" class="btn btn-outline-dark btn-sm" data-bs-toggle="modal" data-bs-target="#exampleModal">
+				Generate shopping list
+			</button>
+			<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+				<div class="modal-dialog">
+					<div class="modal-content">
+						<div class="modal-header">
+							<h1 class="modal-title fs-5" id="exampleModalLabel">Generate shopping list</h1>
+							<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+						</div>
+						<div class="modal-body">
+							<span>Choose an inventory to use</span>
+							<div class="d-flex justify-content-between align-items-center mt-3">
+								<div class="dropdown-center">
+									<button class="btn btn-outline-dark btn-sm dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+										..Select inventory..
+									</button>
+									<ul class="dropdown-menu">
+									</ul>
+								</div>
+								<div>
+									<%= link_to 'Generate', new_recipe_path, class: 'btn btn-outline-dark btn-sm' %>
+								</div>
 							</div>
 						</div>
-		      </div>
-		    </div>
-		  </div>
+					</div>
+				</div>
+			</div>
+			<%= link_to 'Add ingredient', new_recipe_path, class: 'btn btn-outline-dark btn-sm' %>
 		</div>
-		<%= link_to 'Add ingredient', new_recipe_path, class: 'btn btn-outline-dark btn-sm' %>
-	</div>
+	<% end %>
 	<hr/>
 	<table class="table table-striped table-bordered">
-		<thead>
-			<tr>
-				<th scope="col">Food</th>
-				<th scope="col">Quantity</th>
-				<th scope="col">Value</th>
-				<th scope="col">Action</th>
-			</tr>
-		</thead>
-		<tbody>
-		</tbody>
+		<% if @recipe.recipe_foods.any? %>
+			<thead>
+				<tr>
+					<th scope="col">Food</th>
+					<th scope="col">Quantity</th>
+					<th scope="col">Value</th>
+					<th scope="col">Action</th>
+				</tr>
+			</thead>
+			<tbody>
+			</tbody>
+		<% end %>
 	</table>
 </section>
