Add margin between action buttons

--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -50,7 +50,7 @@
 					<th scope="col">Food</th>
 					<th scope="col">Quantity</th>
 					<th scope="col">Value</th>
-					<th scope="col">Action</th>
+					<th scope="col">Actions</th>
 				</tr>
 			</thead>
 			<tbody>
@@ -59,6 +59,10 @@
 					<td><%=food_recipe.food.name %></td>
 					<td><%=food_recipe.quantity %></td>
 					<td><%=food_recipe.quantity * food_recipe.food.price %></td>
+					<td>
+						<%= link_to 'Modify', edit_recipe_recipe_food_path(@recipe, id: food_recipe), class: 'me-1' %>
+      			<%= link_to 'Remove', recipe_recipe_food_path(@recipe, id: food_recipe), method: :delete, data: { confirm: 'Are you sure?' } %>
+					</td>
 				</tr>
 			<% end %>
 			</tbody>
