--- a/app/views/home/_navbar.html.erb
+++ b/app/views/home/_navbar.html.erb
@@ -7,13 +7,13 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <%= link_to 'Foods', recipes_path, class: 'nav-link active', aria: {current: "page"} %>
+          <%= link_to 'Inventories', recipes_path, class: 'nav-link active', aria: {current: "page"} %>
         </li>
         <li class="nav-item">
           <%= link_to 'Recipes', recipes_path, class: 'nav-link' %>
         </li>
          <li class="nav-item">
-          <%= link_to 'Inventories', recipes_path, class: 'nav-link' %>
+          <%= link_to 'Foods', recipes_path, class: 'nav-link' %>
         </li>
       </ul>
     </div>
