--- a/app/views/home/_navbar.html.erb
+++ b/app/views/home/_navbar.html.erb
@@ -1,22 +1,24 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary navbar-dark bg-dark">
-  <div class="container-fluid">
-    <%= link_to 'Recipe App', authenticated_root_path, class: "navbar-brand" %>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <%= link_to 'Inventories', recipes_path, class: 'nav-link active', aria: {current: "page"} %>
-        </li>
-        <li class="nav-item">
-          <%= link_to 'Recipes', recipes_path, class: 'nav-link' %>
-        </li>
-         <li class="nav-item">
-          <%= link_to 'Foods', recipes_path, class: 'nav-link' %>
-        </li>
-      </ul>
+<% if user_signed_in? %>
+  <nav class="navbar navbar-expand-lg bg-body-tertiary navbar-dark bg-dark">
+    <div class="container-fluid">
+      <%= link_to 'Recipe App', authenticated_root_path, class: "navbar-brand" %>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <%= link_to 'Inventories', recipes_path, class: 'nav-link active', aria: {current: "page"} %>
+          </li>
+          <li class="nav-item">
+            <%= link_to 'Recipes', recipes_path, class: 'nav-link' %>
+          </li>
+           <li class="nav-item">
+            <%= link_to 'Foods', recipes_path, class: 'nav-link' %>
+          </li>
+        </ul>
+      </div>
     </div>
-  </div>
-</nav>
-<br>
+  </nav>
+  <br>
+<% end %>
