--- a/app/views/recipes/shopping_list.html.erb
+++ b/app/views/recipes/shopping_list.html.erb
@@ -3,12 +3,12 @@
 <section>
   <div class="d-flex justify-content-between align-items-center">
     <div>
-      <p>Amount of food to buy: <span><%=%></span> </p>
-      <p>Total value of food needed:<span><%%></span> </p>
+      <p>Amount of food to buy:  </p>
+      <p>Total value of food needed: </p>
     </div>
     <div>
-      <p>Recipe: <%= link_to @recipe.name, recipe_path(@recipe) %></p>
-      <p>Inventory:</p>
+      <p>Inventory: <%= link_to @recipe.name, recipe_path(@recipe) %></p>
+      <p>Inventory: <%= link_to @inventory.name, inventory_path(@inventory) %></p>
     </div>
   </div>
   <table class="table table-striped table-bordered">
