--- a/app/views/foods/new.html.erb
+++ b/app/views/foods/new.html.erb
@@ -10,18 +10,21 @@
     </div>
   <% end %>
   <div>
-    <%= form.label :name, style: "display: block" %>
-    <%= form.text_field :name %>
+    <%= form.label :name %>
+    <%= form.text_field :name, class: 'form-control' %>
   </div>
+  <br>
   <div>
-    <%= form.label :measurement_unit, style: "display: block" %>
-    <%= form.text_field :measurement_unit %>
+    <%= form.label :measurement_unit %>
+    <%= form.text_field :measurement_unit, class: 'form-control' %>
   </div>
+  <br>
   <div>
-    <%= form.label :price, style: "display: block" %>
-    <%= form.text_field :price %>
+    <%= form.label :price %>
+    <%= form.text_field :price, class: 'form-control' %>
   </div>
+  <br>
   <div>
-    <%= form.submit %>
+    <%= form.submit class: 'btn btn-outline-dark btn-sm' %>
   </div>
 <% end %>
