--- a/app/views/recipes/shopping_list.html.erb
+++ b/app/views/recipes/shopping_list.html.erb
@@ -3,8 +3,8 @@
 <section>
   <div class="d-flex justify-content-between align-items-center">
     <div>
-      <p>Amount of food to buy:</p>
-      <p>Total value of food needed: </p>
+      <p>Amount of food to buy: <%= @missing_foods.count %></p>
+      <p>Total value of food needed: $<%= @missing_foods.sum {|food| food.food.price } %> </p>
     </div>
     <div>
       <p>Inventory: <%= link_to @recipe.name, recipe_path(@recipe) %></p>
@@ -12,14 +12,23 @@
     </div>
   </div>
   <table class="table table-striped table-bordered">
-    <thead>
-      <tr>
-        <th scope="col">Food</th>
-        <th scope="col">Quantity</th>
-        <th scope="col">Price</th>
-      </tr>
-    </thead>
-    <tbody>
-    </tbody>
+    <% if @missing_foods.any? %>
+      <thead>
+        <tr>
+          <th scope="col">Food</th>
+          <th scope="col">Quantity</th>
+          <th scope="col">Price</th>
+        </tr>
+      </thead>
+      <tbody>
+      <% @missing_foods.each do |food| %>
+        <tr>
+          <td><%= food.food.name%></td>
+          <td><%= food.quantity%></td>
+          <td><%= food.food.price%></td>
+        </tr>
+      <% end %>
+      </tbody>
+    <% end %>
   </table>
 </section>
