--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,6 +1,6 @@
 <section class="my-3 p-3">
 	<% @recipes.each do |recipe| %>
-		<% unless recipe.private? %>
+		<% if recipe.public? %>
 			<%= render 'recipe', recipe: recipe %>
 		<% end %>
 	<% end %>
