--- a/app/views/inventory_foods/new.html.erb
+++ b/app/views/inventory_foods/new.html.erb
@@ -10,6 +10,11 @@
   </div>
   <br>
   <div>
+    <%= f.label :quantity_unit, "Quantity unit" %>
+    <%= f.text_field :quantity_unit, autofocus: true, autocomplete: "quantity_unit", class: 'form-control' %>
+  </div>
+  <br>
+  <div>
     <%= f.submit "Add Food", class: 'btn btn-outline-dark btn-sm' %>
   </div>
 <% end %>
