--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -3,12 +3,15 @@
 		<h2 class="text-center mb-3"><%= @recipe.name %></h2>
 		<div class="d-flex justify-content-between align-items-center mb-3">
 			<span>Preparation Time: <%= @recipe.preparation_time %></span>
-			<div class="form-check form-switch form-check-reverse">
-				<div class="form-check form-switch form-check-reverse">
-					<%= check_box_tag :status, 'public', @recipe.public?, id: 'status-toggle', class: 'form-check-input' %>
-					<%= label_tag 'status-toggle', 'Public', class: 'form-check-label' %>
-				</div>
-			</div>
+<%= form_with model: @recipe do |f| %>
+  <div class="form-check form-switch form-check-reverse">
+    <%= f.check_box :public, class: 'form-check-input', id: 'public-toggle' %>
+    <%= f.label 'public-toggle', 'Public', class: 'form-check-label' %>
+  </div>
+  <%= f.submit class: 'btn btn-outline-dark btn-sm' %>
+<% end %>
+
+
 		</div>
 		<span class="d-block mb-3">Cooking Time: <%= @recipe.cooking_time %></span>
 		<span>Steps goes here...</span>
@@ -56,7 +59,7 @@
 			<% @recipe.recipe_foods.each do |food_recipe| %>
 				<tr>
 					<td><%=food_recipe.food.name %></td>
-					<td><%=food_recipe.quantity %></td>
+					<td><%=food_recipe.quantity %> <%=food_recipe.quantity_unit %></td>
 					<td>$<%=food_recipe.quantity * food_recipe.food.price %></td>
 					<td>
 						<%= link_to 'Modify', edit_recipe_recipe_food_path(@recipe, id: food_recipe), class: 'me-1' %>
