--- a/app/views/foods/index.html.erb
+++ b/app/views/foods/index.html.erb
@@ -15,7 +15,7 @@
       <td><%=food.name%></td>
       <td><%=food.measurement_unit%> <%=food.unit_quantity%></td>
       <td>$<%=food.measurement_unit * food.price%></td>
-      <td><%= link_to "DELETE",[food], method: :delete, data: {confirm: 'Are you sure!'} %></td>
+      <td><%= link_to "Delete",[food], method: :delete, data: {confirm: 'Are you sure!'} %></td>
     </tr>
   <%end%>
   </tbody>
