--- a/app/views/home/_navbar.html.erb
+++ b/app/views/home/_navbar.html.erb
@@ -13,8 +13,11 @@
           <li class="nav-item">
             <%= link_to 'Recipes', recipes_path, class: 'nav-link' %>
           </li>
-           <li class="nav-item">
+          <li class="nav-item">
             <%= link_to 'Foods', foods_path, class: 'nav-link' %>
+          </li>
+          <li class="nav-item">
+            <%= link_to 'Public Recipes', public_recipes_path, class: 'nav-link' %>
           </li>
         </ul>
       </div>
