--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -3,15 +3,12 @@
 		<h2 class="text-center mb-3"><%= @recipe.name %></h2>
 		<div class="d-flex justify-content-between align-items-center mb-3">
 			<span>Preparation Time: <%= @recipe.preparation_time %></span>
-<%= form_with model: @recipe do |f| %>
-  <div class="form-check form-switch form-check-reverse">
-    <%= f.check_box :public, class: 'form-check-input', id: 'public-toggle' %>
-    <%= f.label 'public-toggle', 'Public', class: 'form-check-label' %>
-  </div>
-  <%= f.submit class: 'btn btn-outline-dark btn-sm' %>
-<% end %>
-
-
+			<%= form_with(model: @recipe, url: recipe_path(@recipe), method: :patch, id: 'recipe-form') do |form| %>
+				<div class="form-check form-switch form-check-reverse">
+					<%= form.check_box :public, class: 'form-check-input', id: 'toggle-btn', data: { public: @recipe.public } %>
+					<%= form.label :public, class: 'form-check-label' %>
+				</div>
+			<% end %>
 		</div>
 		<span class="d-block mb-3">Cooking Time: <%= @recipe.cooking_time %></span>
 		<span>Steps goes here...</span>
@@ -71,3 +68,4 @@
 		<% end %>
 	</table>
 </section>
+<%= javascript_include_tag 'recipes' %>
