--- a/app/views/inventories/index.html.erb
+++ b/app/views/inventories/index.html.erb
@@ -4,6 +4,7 @@
  <div class="col-4">
  
  <%= link_to item.name, item, class: 'nav-link'%>
+ <% if can? :destroy, item %><%= link_to 'REMOVE', [item], method: :delete, data: {confirm: 'Are you sure!'}, class: 'fs-6 text-decoration-none' %><%end%>
  </div>
  <div class="col-8">
   <%= item.description%>
